--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore ./FakeItEasyDemo/FakeitEasyDemo.csproj
     - name: Build Unit Tests
       run: dotnet build ./FakeItEasyDemo/FakeitEasyDemo.csproj
     - name: Test
