--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore ../FakeItEasyDemo/FakeitEasyDemo.csproj
+      run: dotnet restore "FakeItEasyDemo/FakeitEasyDemo.csproj"
     - name: Build Unit Tests
-      run: dotnet build ../FakeItEasyDemo/FakeitEasyDemo.csproj
+      run: dotnet build "FakeItEasyDemo/FakeitEasyDemo.csproj"
     - name: Test
       run: dotnet test --no-build --verbosity normal
