--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,8 +21,8 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore UnitTesting/FakeItEasyDemo/FakeitEasyDemo.csproj
+      run: dotnet restore **/FakeitEasyDemo.csproj
     - name: Build Unit Tests
-      run: dotnet build UnitTesting/FakeItEasyDemo/FakeitEasyDemo.csproj
+      run: dotnet build **/FakeitEasyDemo.csproj
     - name: Test
       run: dotnet test --no-build --verbosity normal
