--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 8.0.x
     - name: Restore dependencies
-      run: dotnet restore --force --source FakeItEasyDemo/FakeItEasyDemo.csproj
+      run: dotnet restore --force --source ../../FakeItEasyDemo/FakeItEasyDemo.csproj
 #    - name: Build Unit Tests
 #      run: dotnet build FakeitEasyDemo/FakeitEasyDemo.csproj
 #    - name: Test
