--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,13 +18,13 @@ jobs:
      - uses: actions/checkout@v3
      - name: List Files
        run: ls -R
- #   - uses: actions/checkout@v3
- #   - name: Setup .NET
- #     uses: actions/setup-dotnet@v3
- #     with:
- #       dotnet-version: 8.0.x
- #   - name: Restore dependencies
- #     run: dotnet restore --force --source ././FakeItEasyDemo/FakeItEasyDemo.csproj
+     - uses: actions/checkout@v3
+     - name: Setup .NET
+       uses: actions/setup-dotnet@v3
+       with:
+         dotnet-version: 8.0.x
+     - name: Restore dependencies
+       run: dotnet restore --force --source ./FakeItEasyDemo/FakeItEasyDemo.csproj
 #    - name: Build Unit Tests
 #      run: dotnet build FakeitEasyDemo/FakeitEasyDemo.csproj
 #    - name: Test
