--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,8 +24,6 @@ jobs:
        with:
          dotnet-version: 8.0.x
      - name: Build
-       run: dotnet build ./FakeItEasyDemo/FakeItEasyDemo.csproj
-#    - name: Build Unit Tests
-#      run: dotnet build FakeitEasyDemo/FakeitEasyDemo.csproj
-#    - name: Test
-#      run: dotnet test --no-build --verbosity normal
+       run: dotnet build ./FakeItEasyDemo/FakeItEasyDemo.csproj    
+     - name: Test
+       run: dotnet test ./UnitTesting/UnitTesting.csproj
